package constants;

public class Message {
    public static final String GREETING_MESSAGE = "Wake up and slave~";
    public static final String EXIT_MESSAGE = "See you at the next slave session~";
}
