@startuml
!include .PlantUML.config

skinparam nodesep 10

class Regex <<utility>> {
    + {static} DIVIDER_REGEX: String
}

class Message <<utility>> {
    + {static} GREETING_MESSAGE: String
    + {static} EXIT_MESSAGE: String
}

class Ui {
    - in: Scanner
    + greetUser(): void
    + sayGoodbye(): void
    + getUserInput(): String
    + {static} printList(arrayList: ArrayList<T>, columns ArrayList<PrintColumn<T>>): void
}

class AuthorList {
    + {static} authorColumnsToPrint(): ArrayList<PrintColumn<Author>>
}

class MangaList {
    + {static} mangaColumnsToPrint(includeDeadline: boolean, includeSales: boolean): ArrayList<PrintColumn<Manga>>
}

class Author {
    - authorName: String
    + getAuthorName(): String
}

class Manga {
    - mangaName: String
    - deadline: String
    + getMangaName(): String
    + getDeadline(): String
    + getSalesData(): Sale
}

class Sale {
    - quantitySold: int
    - unitPrice: double
    - totalRevenue: double
    + getQuantitySold(): int
    + getUnitPrice(): double
    + getTotalRevenue(): double
}

class PrintColumn<T> {
    - header: String
    - width: int
    - valueProvider: Function<T, String>
    + getHeader(): String
    + getWidth(): int
    + getValue(object: T): String
}

Regex <.. Ui : uses
Message <.. Ui : uses

Ui ..> AuthorList : prints >
Ui ..> MangaList : prints >

MangaList o--- "*" Manga : comprises of >
MangaList .l.> "2..6" PrintColumn: specifies print configuration for Ui >

AuthorList o--- "*" Author : comprises of >
AuthorList .r.> "2" PrintColumn: specifies print configuration for Ui >

Manga ---> "salesData\n0..1" Sale
Manga -l-> "author\n0..1" Author

'PrintColumn .> Manga : gives valueProvider to <
'PrintColumn .> Author : gives valueProvider to <
'PrintColumn ..> Sale : gives valueProvider to <

note "valueProviders are methods that return the String representation of a particular attribute of a class. They come from Author/Manga/Sale (e.g. getMangaName(), getTotalRevenue())" as valueProviderNote
PrintColumn .. valueProviderNote

@enduml